--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,9 +5,8 @@
   /*===== Colors =====*/
   /*Purple 260 - Red 355 - Blue 224 - Pink 340*/
   /* HSL color mode */
-  --hue-color: 0;
-  --first-color: hsl(var(--hue-color), 0%, 50%);
-  --second-color: hsl(var(--hue-color), 0%, 15%);
+  --first-color: hsl(0, 0%, 50%);
+  --second-color: hsl(0, 0%, 15%);
   /*=====FOnt =====*/
   --body-font: "Times New Roman", sans-serif;
   --big-font-size: 2rem;
